--- a/package.json
+++ b/package.json
@@ -5,8 +5,19 @@
   "main": "index.js",
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "font-awesome": "^4.7.0",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "redux": "^3.7.2",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "prop-types": "^15.5.10",
+    "immutable": "^3.8.1",
+    "isomorphic-fetch": "^2.2.1",
+    "connected-react-router": "^4.2.3",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -18,12 +29,14 @@
     "browser-sync": "^2.18.13",
     "browser-sync-webpack-plugin": "^1.2.0",
     "css-loader": "^0.28.7",
+    "extract-loader": "^1.0.0",
     "eslint": "^4.9.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^7.4.0",
     "file-loader": "^0.11.2",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "url-loader": "^0.5.9",
     "style-loader": "^0.19.0",
     "webpack": "^3.3.0"
   },
