--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "font-awesome": "^4.7.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-transition-group": "^2.2.0",
     "redux": "^3.7.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
