connect to redux

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "connected-react-router": "^4.2.3",
+    "memoizee": "^0.4.11",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
