--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-transition-group": "^2.2.0",
+    "react-helmet": "^5.2.0",
     "redux": "^3.7.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
@@ -18,6 +19,7 @@
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "connected-react-router": "^4.2.3",
+    "history": "^4.7.2",
     "memoizee": "^0.4.11",
     "uuid": "^3.1.0"
   },
