authentication to api, show errors

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "redux-form": "^7.1.1",
+    "react-loader-advanced": "^1.7.1",
     "prop-types": "^15.5.10",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
@@ -23,6 +24,7 @@
     "history": "^4.7.2",
     "memoizee": "^0.4.11",
     "classnames": "^2.2.5",
+    "es6-promise": "^4.1.1",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
