--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "redux-thunk": "^2.2.0",
     "redux-form": "^7.1.1",
     "react-loader-advanced": "^1.7.1",
+    "react-dropzone": "^4.2.0",
     "prop-types": "^15.5.10",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
