add/view/delete message - only for one constat channel without auto refresh, not work prav

--- a/package.json
+++ b/package.json
@@ -5,27 +5,28 @@
   "main": "index.js",
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "classnames": "^2.2.5",
+    "connected-react-router": "^4.2.3",
+    "es6-promise": "^4.1.1",
     "font-awesome": "^4.7.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-transition-group": "^2.2.0",
-    "react-helmet": "^5.2.0",
-    "redux": "^3.7.2",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
-    "redux-form": "^7.1.1",
-    "react-loader-advanced": "^1.7.1",
-    "react-dropzone": "^4.2.0",
-    "prop-types": "^15.5.10",
+    "history": "^4.7.2",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
-    "connected-react-router": "^4.2.3",
-    "history": "^4.7.2",
     "memoizee": "^0.4.11",
-    "classnames": "^2.2.5",
-    "es6-promise": "^4.1.1",
+    "prop-types": "^15.5.10",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-dropzone": "^4.2.0",
+    "react-helmet": "^5.2.0",
+    "react-loader-advanced": "^1.7.1",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-select": "^1.0.0-rc.10",
+    "react-transition-group": "^2.2.0",
+    "redux": "^3.7.2",
+    "redux-form": "^7.1.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
