--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.0.0",
     "react-dropzone": "^4.2.0",
     "react-helmet": "^5.2.0",
+    "react-intl": "^2.4.0",
     "react-loader-advanced": "^1.7.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
