--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-loader-advanced": "^1.7.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-scrollbar": "^0.5.1",
     "react-select": "^1.0.0-rc.10",
     "react-transition-group": "^2.2.0",
     "redux": "^3.7.2",
