--- a/package.json
+++ b/package.json
@@ -51,13 +51,15 @@
     "less-loader": "^4.0.5",
     "url-loader": "^0.5.9",
     "style-loader": "^0.19.0",
-    "webpack": "^3.3.0"
+    "webpack": "^3.3.0",
+    "@types/jest": "^21.1.4",
+    "jest": "^21.2.1"
   },
   "scripts": {
     "build": "webpack",
     "build-production": "set NODE_ENV=production&& webpack",
     "start": "webpack -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
