--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "build": "webpack",
     "build-production": "set NODE_ENV=production&& webpack",
     "start": "webpack -w",
-    "test": "jest"
+    "test": "jest",
+    "test-watch": "jest --watchAll"
   },
   "repository": {
     "type": "git",
